tests/language_modules/14_comments_whitespace/valid/line_comments.vf
-- file header comment
module LineComments

-- declaration comment
procedure main()
is
    -- statement comment
    check true
end main

-- footer comment
end LineComments