tests/language_modules/14_comments_whitespace/invalid_syntax/nested_block_comment.vf
module NestedBlockComment

/* outer /* inner */ outer */
procedure main()
is
    check true
end main

end NestedBlockComment